# rust-utils

./: Cargo.toml  README.md
config/: default.toml
data/: highscores.json
data/learning_sets/: biology_basics.json
src/: lib.rs  main.rs  main.rs.old
src/core/: config.rs  error.rs  mod.rs  types.rs
src/modules/: mod.rs
src/modules/learning/: fuzzy.rs  mod.rs  models.rs  parsers.rs  spaced_rep.rs
src/modules/typing/: highscore.rs  mod.rs  scorer.rs  word_loader.rs
src/ui/: app.rs  mod.rs  render.rs  tui.rs
src/utils/: mod.rs
