[package]
name = "rust-util-tools"
version = "0.2.0"
edition = "2021"
authors = ["Rust Util Tools Contributors"]
description = "All-in-One Learning & Utility CLI Suite"
license = "MIT"

[[bin]]
name = "rut"
path = "src/main.rs"

[dependencies]
# CLI & Argument Parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI & Terminal
ratatui = "0.26"
crossterm = "0.27"
dialoguer = "0.11"
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rand = "0.8"
chrono = "0.4"
strsim = "0.11"

# Performance
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
